--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://wani-toon.netlify.app",
+  "homepage": "https://wani-toon.netlify.app/",
   "eslintConfig": {
     "extends": [
       "react-app",
